# data-agent-demo

./: .gitignore  README.md  main.py  plan.md  pyproject.toml  requirements.txt  run_baseline.sh  run_query_gpt.sh
agents/: chart_agent.py  sql_agent.py
baseline_system/: app_baseline.py
baseline_system/agents/: analyzer_agent.py  chart_agent.py  sql_agent.py
baseline_system/semantic/: __init__.py  column_matcher.py  keyword_dicts.py  semantic_analyzer.py
baseline_system/tools/: chart_tools.py  sql_tools.py
benchmark/: results.json  results_baseline.json  results_query_gpt.json  run_eval.py  run_eval_baseline.py  run_eval_query_gpt.py  summary.txt  summary_query_gpt.txt
data-code/: sql_samples.json
data-code/sale_data/: README.md  product_catalog.csv
data/InfiAgent/: README.md
data/sale_data/: campaign_performance.csv  customer_demographics.csv  regional_sales.csv  sales_channels.csv  sales_data.csv
query_gpt_system/: app_query_gpt.py
query_gpt_system/core_agents/: column_pruner.py  genai_gateway.py  intent_agent.py  result_refiner.py  sql_sample_retriever.py  table_agent.py
query_gpt_system/executor/: sql_engine.py
query_gpt_system/metadata/: schema_builder.py  schema_registry.json
query_gpt_system/sql_samples/: ingest_samples.py
tools/: sql_tools.py
utils/: csv_helpers.py
